--- a/css/styles.css
+++ b/css/styles.css
@@ -255,7 +255,7 @@ img {
     padding-bottom: 94px;
 }
 
-.features-card{
+.features__card{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -266,7 +266,7 @@ img {
     margin-bottom: 30px;
 }
 
-.features-item {
+.features__title {
     margin-bottom: 10px;
     font-weight: 700;
     font-size: 14px;
@@ -276,18 +276,18 @@ img {
     color: var(--main-title-color);
 }
 
-.features-text {
+.features__text {
     line-height: calc(24 / 14);
     letter-spacing: 0.03em;
 }
 
 /* Work examples */
 
-.work-section {
+.work__section {
     padding-top: 0;
 }
 
-.section-title {
+.section__title {
     margin-bottom: 50px;
 
     font-weight: 700;
@@ -298,15 +298,15 @@ img {
     color: var(--main-title-color);
 }
 
-.work-list {
+.work__list {
     --items: 3;
 }
 
-.work-item {
+.work__item {
     position: relative;
 }
 
-.work-overlay {
+.work__overlay {
     position: absolute;
     left: 0;
     bottom: 0;
@@ -321,7 +321,7 @@ img {
     background-color: var(--overlay-dark-background-color);
 }
 
-.work-text {
+.work__text {
     font-weight: 700;
     line-height: calc(16/14);
     letter-spacing: 0.03em;
@@ -335,16 +335,16 @@ img {
     background-color: var(--secondary-background-color);
 }
 
-.team-card {
+.team__card {
     background-color: var(--main-background-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 }
-.team-wrapper {
+.team__wrapper {
     padding: 30px 10px;
 }
 
-.team-name {
+.team__name {
     margin-bottom: 10px;
 
     font-weight: 500;
@@ -355,7 +355,7 @@ img {
     color: var(--main-title-color);
 }
 
-.team-postion {
+.team__postion {
     margin-bottom: 16px;
     font-size: 16px;
     line-height: calc(19 / 16);
@@ -370,7 +370,7 @@ img {
     gap: 10px;
 }
 
-.socials-link {
+.socials__link {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -382,25 +382,25 @@ img {
     transition: color var(--anmtn-duration-cubic), background-color var(--anmtn-duration-cubic);
 }
 
-.socials-link:hover,
-.socials-link:focus {
+.socials__link:hover,
+.socials__link:focus {
     background-color: var(--accent-color);
     color: var(--icon-white-color);
 }
 
-.socials-icon {
+.socials__icon {
     fill: currentColor;
 }
 /*Clients*/
 
-.client-list {
+.client__list {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 30px;
 }
 
-.client-link {
+.client__link {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -413,13 +413,13 @@ img {
         transition: color var(--anmtn-duration-cubic), border var(--anmtn-duration-cubic);
 }
 
-.client-link:hover,
-.client-link:focus {
+.client__link:hover,
+.client__link:focus {
     color: var(--accent-color);
     border: 1px solid var(--accent-color);
 }
 
-.client-icon {
+.client__icon {
     fill: currentColor
 }
 /* Footer*/
@@ -430,44 +430,47 @@ img {
     background-color: var(--dark-background-color);
 }
 
-.footer-container {
+.footer__container {
     display: flex;
     align-items: baseline;
 }
 
-.contacts {
+.footer__contacts {
     margin-right: 70px;
 }
 
-.logo-footer {
+.footer__logo {
     display: inline-block;
     margin-bottom: 20px;
 
     color: var(--main-white-color)
 }
 
-.contact-item:not(:last-child) {
+.footer__contacts-item:not(:last-child) {
     margin-bottom: 9px;
 }
 
-.contact-link {
+.footer__contacts-link {
     font-style: normal;
     line-height: calc(21 / 14);
     letter-spacing: 0.03em;
     color: var(--main-white-color);
     transition: color var(--anmtn-duration-cubic);
 }
-.contact-link.mail ,
-.contact-link.phone {
+.footer__contacts-link--alpha {
     color: var(--sencondary-white-color);
 }
 
-.contact-link:hover,
-.contact-link:focus {
+.footer__contacts-link:hover,
+.footer__contacts-link:focus {
     color: var(--accent-color)
 }
 
-.footer-title {
+.footer__socials {
+    margin-right: auto;
+}
+
+.footer__title {
     display: block;
     margin-bottom: 20px;
     font-weight: 700;
@@ -478,36 +481,23 @@ img {
     color: var(--main-white-color);
 }
 
-.social {
-    margin-right: auto;
-}
-.footer-socials-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
+.socials__link--dark {
     background-color: var(--icon-footer-bg-color);
     color: var(--icon-white-color);
     transition: background-color var(--anmtn-duration-cubic);
 }
 
-.footer-socials-link:hover,
-.footer-socials-link:focus {
+.socials__link--dark:hover,
+.socials__link--dark:focus {
     background-color: var(--accent-color);
 }
 
-.footer-socials-icon {
-    fill: currentColor;
-}
-
-.subscription {
+.subscription-form__label {
     width: 100%;
     margin-right: 13px;
 }
 
-.subscription-field {
+.subscription-form__input {
     width: 358px;
     height: 50px;
     padding: 15px 16px;
@@ -518,13 +508,13 @@ img {
 
 }
 
-.subscription-field::placeholder {
+.subscription-form__input::placeholder {
     font-size: 16px;
     line-height: calc(20/16);
     letter-spacing: 0.03em;
 }
 
-.subscribe-btn, .order-btn {
+.subscription-form__btn, .order-btn {
     position: relative;
     min-width: 200px;
     padding: 10px 28px;
@@ -539,7 +529,7 @@ img {
     color: var(--main-white-color);
 }
 
-.icon-send {
+.btn__icon-send {
     position: absolute;
     top: 50%;
     right: 28px;
