--- a/css/styles.css
+++ b/css/styles.css
@@ -514,7 +514,7 @@ img {
     letter-spacing: 0.03em;
 }
 
-.subscription-form__btn, .order-btn {
+.subscription-form__btn, .order-form__btn {
     position: relative;
     min-width: 200px;
     padding: 10px 28px;
@@ -720,7 +720,7 @@ img {
     width: 100%
 }
 
-.order-form-title {
+.order-form__title {
     display: block;
     margin-bottom: 12px;
     font-weight: 700;
@@ -731,7 +731,7 @@ img {
     color: var(--main-title-color);
 }
 
-.order-form-label {
+.order-form__label {
     display: block;
     margin-bottom: 4px;
     font-size: 12px;
@@ -739,12 +739,12 @@ img {
     letter-spacing: 0.01em;
 }
 
-.input-wrapper {
+.order-form__input-wrapper {
     position: relative;
     width: 100%;
 }
 
-.order-form-input {
+.order-form__input {
     display: block;
     width: 100%;
     height: 40px;
@@ -755,12 +755,12 @@ img {
     transition: border-color var(--anmtn-duration-cubic);
 }
 
-.order-form-input:focus {
+.order-form__input:focus {
     outline: unset;
     border-color: var(--accent-color);
 }
 
-.input-icon {
+.input__icon {
     position: absolute;
     top: 50%;
     left: 12px;
@@ -769,11 +769,11 @@ img {
     transition: fill var(--anmtn-duration-cubic);
 }
 
-.order-form-input:focus + .input-icon  {
+.order-form__input:focus + .input-icon  {
     fill: var(--accent-color);
 }
 
-.order-form-text {
+.order-form__text {
     width: 100%;
     height: 120px;
     padding: 12px 16px;
@@ -784,19 +784,19 @@ img {
     transition: border-color var(--anmtn-duration-cubic);
 }
 
-.order-form-text:focus {
+.order-form__text:focus {
     outline: unset;
     border-color: var(--accent-color);
 }
 
-.order-form-text::placeholder {
+.order-form__text::placeholder {
     font-size: 12px;
     line-height: calc(14/12);
     letter-spacing: 0.01em;
     color: rgba(117, 117, 117, 0.5);
 }
 
-.checkbox-label {
+.checkbox__label {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -806,25 +806,25 @@ img {
     letter-spacing: 0.03em;
 }
 
-.uncheck {
+.checkbox__icon--uncheck {
     opacity: 1;
     transition: opacity var(--anmtn-duration-cubic);
 }
 
-.check {
+.checkbox__icon--check {
     opacity: 0;
     transition: opacity var(--anmtn-duration-cubic);
 }
 
-.checkbox-input:checked + .checkbox-icon .uncheck {
+.checkbox__input:checked + .checkbox__icon .checkbox__icon--uncheck {
     opacity: 0;
 }
 
-.checkbox-input:checked+.checkbox-icon .check {
+.checkbox__input:checked + .checkbox__icon .checkbox__icon--check {
     opacity: 1;
 }
 
-.checkbox-input:focus-visible + .checkbox-icon {
+.checkbox__input:focus-visible + .checkbox__icon {
     outline: auto;
     outline-offset: 1px;
     outline-color: #2360C5;
@@ -835,7 +835,7 @@ img {
     color: var(--accent-color);
 }
 
-.order-btn {
+.order-form__btn {
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -843,8 +843,8 @@ img {
     transition: background-color var(--anmtn-duration-cubic);
 }
 
-.order-btn:active,
-.order-btn:hover,
-.order-btn:focus {
+.order-form__btn:active,
+.order-form__btn:hover,
+.order-form__btn:focus {
     background-color: var(--btn-active-color);
 }
