--- a/css/styles.css
+++ b/css/styles.css
@@ -90,10 +90,24 @@ img {
     list-style: none;
 }
 
-.btn {
+button {
     font-family: inherit;
     cursor: pointer;
     border: 0;
+}
+
+.btn {
+    min-width: 200px;
+    padding: 10px 28px;
+    background-color: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    text-align: center;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: calc(30/16);
+    letter-spacing: 0.06em;
+    color: var(--main-white-color);
 }
 
 /* Header*/
@@ -230,16 +244,6 @@ img {
 .hero-section__btn {
     padding: 10px 32px;
     min-width: 216px;
-
-    font-weight: 700;
-    font-size: 16px;
-    line-height: calc(30 / 16);
-    text-align: center;
-    letter-spacing: 0.06em;
-    color: var(--main-white-color);
-    background-color: var(--accent-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
     transition: background-color var(--anmtn-duration-cubic);
 }
 
@@ -514,19 +518,9 @@ img {
     letter-spacing: 0.03em;
 }
 
-.subscription-form__btn, .order-form__btn {
+.subscription-form__btn {
     position: relative;
-    min-width: 200px;
-    padding: 10px 28px;
-    background-color: var(--accent-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    font-weight: 700;
-    font-size: 16px;
     text-align: left;
-    line-height: calc(30/16);
-    letter-spacing: 0.06em;
-    color: var(--main-white-color);
 }
 
 .btn__icon-send {
@@ -539,14 +533,14 @@ img {
 
 /* Filer */
 
-.filter-list {
+.filter {
     display:flex;
     justify-content: center;
     gap: 8px;
     margin-bottom: 50px;
 }
 
-.filter-btn {
+.filter__btn {
     padding: 6px 22px;
     min-width: 73px;
 
@@ -561,33 +555,33 @@ img {
     transition: color var(--anmtn-duration-cubic), background-color var(--anmtn-duration-cubic), box-shadow var(--anmtn-duration-cubic);
 }
 
-.filter-btn.current {
+.filter__btn--current {
     color: var(--main-white-color);
     background-color: var(--accent-color);
 }
 
-.filter-btn:hover,
-.filter-btn:focus {
+.filter__btn:hover,
+.filter__btn:focus {
     color: var(--main-white-color);
     background-color: var(--accent-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* Portfolio */
-.portfolio-list {
+.portfolio {
     --items: 3;
 }
 
-.portfolio-card {
+.portfolio__card {
     background-color: var(--main-background-color);
     transition: box-shadow var(--anmtn-duration-cubic);
 }
 
-.portfolio-card:hover {
+.portfolio__card:hover {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.project-thumb {
+.card__thumb {
     position: relative;
     overflow: hidden;
 }
@@ -612,25 +606,25 @@ img {
     transition: transform var(--anmtn-duration-cubic);
 }
 
-.portfolio-card:hover .overlay {
+.portfolio__card:hover .overlay {
     transform: translateY(0);
 }
 
-.overlay-text{
+.overlay__text{
     font-size: 18px;
     line-height: calc(28/18);
     letter-spacing: 0.03em;
     color: var(--main-white-color);
 }
 
-.project-wrapper {
+.card__wrapper {
     padding: 20px 24px;
 
     border: 1px solid var(--portfolio-card-border-color);
     border-top: none;
 }
 
-.project-title {
+.card__title {
     margin-bottom: 4px;
     font-weight: 700;
     font-size: 18px;
@@ -639,7 +633,7 @@ img {
     color: var(--main-title-color);
 }
 
-.project-text{
+.card__text{
     font-size: 16px;
     line-height: calc(30 / 16);
     letter-spacing: 0.03em;
@@ -661,7 +655,7 @@ img {
     transition: opacity var(--anmtn-duration-cubic), visibility var(--anmtn-duration-cubic);
 }
 
-.backdrop.is-hidden {
+.backdrop--is-hidden {
     visibility: hidden;
     opacity: 0;
     pointer-events: none;
@@ -684,7 +678,7 @@ img {
     transition: transform var(--anmtn-duration-cubic), opacity var(--anmtn-duration-cubic);
 }
 
-.backdrop.is-hidden .modal {
+.backdrop--is-hidden .modal {
     transform: translateX(-50%) translateY(-50%) scale(1.2);
     opacity: 0;
 }
@@ -708,7 +702,7 @@ img {
     border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-.close-icon {
+.close-btn__icon {
     fill: currentColor;
 }
 
@@ -769,7 +763,7 @@ img {
     transition: fill var(--anmtn-duration-cubic);
 }
 
-.order-form__input:focus + .input-icon  {
+.order-form__input:focus + .input__icon  {
     fill: var(--accent-color);
 }
 
@@ -830,7 +824,7 @@ img {
     outline-color: #2360C5;
 }
 
-.terms-link {
+.checkbox__terms-link {
     text-underline-offset: 2px;
     color: var(--accent-color);
 }
@@ -839,7 +833,6 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    text-align: center;
     transition: background-color var(--anmtn-duration-cubic);
 }
 
